crates/solidity-v2/testing/snapshots/diagnostics_output/structure/constructor_in_library/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 7634] Error: Constructor cannot be defined in libraries.
   ╭─[input.sol:6:5]
   │
 6 │     constructor() {}
   │     ────────┬───────  
   │             ╰───────── Error occurred here.
───╯
